#12 fixed alignment of secret's page and register page

--- a/bunkerweb/src/App.css
+++ b/bunkerweb/src/App.css
@@ -1,18 +1,6 @@
-/* .container {
-  display: flex;  
-  flex-direction: column;
-  font-weight: bold;
-  text-align: left;
-}
 
-.container > * {
-  padding: 5px;
-  flex: 1 100%;
-} */
-/* 
-body {
-  padding: 2em;
-} */
+
+
 
 
 
