--- a/bunkerweb/src/components/Secret.css
+++ b/bunkerweb/src/components/Secret.css
@@ -8,4 +8,18 @@
 
 .save {
     padding-top: 10px;
+    margin-left: 9px;
+}
+
+.inputId {
+    margin-left: 4px;
+}
+
+.inputPassword {
+    margin-left: 10px;
+}
+
+.lockIcon {
+    margin-left: 10px;
+    margin-right: 10px;
 }
